assets/css/main.css
/* ... */
a.older-posts, a.newer-posts {
  font-size: 18px;
  display: inline-block;
  color: #515151;
  -webkit-transition: -webkit-transform .2s;
  transition: -webkit-transform .2s;
  -o-transition: transform .2s;
  transition: transform .2s;
  transition: transform .2s, -webkit-transform .2s;
}

a.older-posts:hover {
  -webkit-transform: translateX(5px);
      -ms-transform: translateX(5px);
          transform: translateX(5px);
}

a.newer-posts:hover {
  -webkit-transform: translateX(-5px);
      -ms-transform: translateX(-5px);
          transform: translateX(-5px);
}

/* - - - - - - - - - - Post Page Styles - - - - - - - - - - */
.wrap-content {
  padding: 20px;
}

.header-page {
  text-align: center;
  margin: 10px 0;
}

.header-page .page-title {
  font-weight: 400;
  margin: 0 0 10px;
  line-height: 1.3;
}

.header-page .page-date {
  color: #a0a0a0;
  font-weight: 300;
  font-size: 12px;
  text-transform: uppercase;
}

.page-cover-image {
  position: relative;
  padding: 0;
  margin: 0;
  max-height: 500px;
  background-color: #fafafa;
  overflow: hidden;
}

.page-cover-image figure {
  position: relative;
  margin: 0;
}

.page-cover-image figcaption {
  position: absolute;
  top: 20px;
  right: 20px;
  padding-left: 20px;
  color: rgba(255, 255, 255, 0.7);
  text-shadow: 0 1px 5px rgba(0, 0, 0, 0.2);
  font-weight: 700;
  text-transform: uppercase;
  font-size: 10px;
}

.page-cover-image .page-image {
  width: 100%;
  height: 100%;
}

.page-footer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
      -ms-flex-pack: justify;
          justify-content: space-between;
  -webkit-flex-wrap: wrap;
      -ms-flex-wrap: wrap;
          flex-wrap: wrap;
  padding-bottom: 30px;
  margin: 30px 0;
  border-bottom: 1px solid #a0a0a0;
}

.page-footer .page-share {
  margin-bottom: 10px;
  text-align: left;
}

.page-footer .page-share a {
  display: inline-block;
  text-decoration: none;
  background-color: #fafafa;
  border: 1px solid #ecf0f1;
  padding: 5px 10px;
  margin-left: 5px;
  color: #263959;
  font-size: 12px;
  -webkit-transition: background-color .3s;
  -o-transition: background-color .3s;
  transition: background-color .3s;
}

.page-footer .page-share a:first-child {
  margin-left: 0;
}

.page-footer .page-share a:hover {
  background-color: #ecf0f1;
}
.post-content .page-tag a,
.page-footer .page-tag a {
  text-decoration: none;
  font-size: 10px;
  padding: 5px 10px;
  margin-left: 5px;
  color: #263959;
  text-transform: uppercase;
  border: 1px solid #263959;
}

.page-content .page-tag a:hover,
.page-footer .page-tag a:hover {
  text-decoration: underline;
}

/* - - - - - - - - - - Tag Styles - - - - - - - - - - */
.blog-tags {
  width: 100%;
  background-color: #ffffff;
  padding: 0 20px 20px;
}

.blog-tags h1 {
  font-size: 30px;
  text-align: center;
  line-height: 1.3;
  color: #263959;
}

.blog-tags h2 {
  color: #263959;
  margin: 10px 0;
}

.tags {
  margin: 0;
  padding: 10px;
}

.tags li {
  display: inline-block;
  margin: 5px;
  list-style: none;
}

.tags li a {
  text-decoration: none;
  color: #263959;
  display: inline-block;
  padding: 5px 10px;
  border: 1px solid #ecf0f1;
  background-color: #fafafa;
  -webkit-transition: all .3s;
  -o-transition: all .3s;
  transition: all .3s;
}

.tags li a:hover {
  background-color: #ecf0f1;
}

.tag-list span a {
  text-decoration: none;
  color: #263959;
}

.tag-list span a:hover {
  text-decoration: underline;
  opacity: .8;
}

/* - - - - - - - - - - Media Styles - - - - - - - - - - */
/* Medium Devices, Desktops */
@media only screen and (max-width: 992px) {
  .post {
    width: 48%;
    max-width: 100%;
    margin: 0 0.9% 1.5%;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -webkit-flex-direction: column;
        -ms-flex-direction: column;
            flex-direction: column;
  }
  .post .post-thumbnail {
    width: 100%;
  }
  .post .post-content {
    width: 100%;
  }
  .post .post-content .post-title {
    margin: 0 0 5px;
  }
  .post .post-content .post-title a {
    font-size: 21px;
  }
}

/* Small Devices, Tablets */
@media only screen and (max-width: 768px) {
  .sidebar {
    position: relative;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -webkit-flex-direction: column;
        -ms-flex-direction: column;
            flex-direction: column;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
        -ms-flex-pack: justify;
            justify-content: space-between;
    width: 100%;
    padding: 10px;
    background-color: #ffffff;
    -webkit-box-shadow: 0 1px 1px 0 rgba(31, 35, 46, 0.15);
            box-shadow: 0 1px 1px 0 rgba(31, 35, 46, 0.15);
  }
  .sidebar footer {
    margin-bottom: 10px;
  }
  .about {
    text-align: center;
    max-width: 480px;
    margin: 10px auto auto;
  }
  .about img {
    width: 100px;
    height: 100px;
    -webkit-border-radius: 100%;
            border-radius: 100%;
    margin-bottom: 10px;
  }
  .content-box {
    padding: 20px 10px;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
    -webkit-flex-direction: row;
        -ms-flex-direction: row;
            flex-direction: row;
    -webkit-flex-wrap: wrap;
        -ms-flex-wrap: wrap;
            flex-wrap: wrap;
    -webkit-box-align: stretch;
    -webkit-align-items: stretch;
        -ms-flex-align: stretch;
            align-items: stretch;
  }
  .contact-title, .copyright {
    display: none;
  }
}
/* ... */

